--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   mime: ^2.0.0
   path_parsing: ^1.1.0
   http: ^1.3.0
+  video_compress: ^3.1.4
 
 dev_dependencies:
   flutter_test:
